cod-tools (3.0.0)

  * Changed:
    - cif2xyz:
      - proper XYZ format with a header is produced by default.
    - cif_fix_values:
      - CIF dictionary handling interface has been changed to match the interface
        of the cif_validate script. The '--dictionaries' option has been replaced
        with the '--dictionary' and the '--add-dictionaries' option with the
        '--add-dictionary' option.
    - cif_parse:
      - the output format from the one produced by the COD::ShowStruct
        module to the one produced by the Data::Dumper module.
    - cif_parse_old_star:
      - the output format from the one produced by the COD::ShowStruct
        module to the one produced by the Data::Dumper module.
    - cif_select:
      - replacing colon (':') with double dash ('--') in messages.
    - cif_split and cif_split_primitive:
      - printing extracted file names to STDOUT instead of STDERR.
    - cif_validate:
      - validation messages are now output to STDOUT instead of STDERR.
    - COD::CIF::Data::CIF2COD, cif2cod and cif2rdf:
      - Replaced values from @default_data_fields with values from
        @new_data_fields; removed @new_data_fields. As a result, cif2cod and
        cif2rdf now outputs columns of the "new" COD 'data' table schema.
    - COD::CIF::Data::SymmetryGenerator:
      - removing 'f2o' parameter from the interface of symop_generate_atoms().
    - COD::CIF::Parser::Yapp:
      - using COD::CIF::Tags::Manage::new_datablock() to ensure the structure
        of each generated CIF data block structure.
    - COD::CIF::Tags::Manage:
      - allowing zero-length data block names in new_datablock() in order to
        make it compatible with the usage in COD::CIF::Parser::Yapp.
    - COD::UserMessage:
      - the interface of print_message(), sprint_message(), note(), warning(),
        error() and debug_note() subroutines.
    - codcif:
      - cif_lexer_set_line_length_limit() and cif_lexer_set_tag_length_limit()