@@ -29,7 +29,7 @@ use COD::ErrorHandler qw( process_warnings
 use COD::ToolsVersion;
 use XML::Simple;
 
-my $print_header = 0; # Indicates whether to print out a header with column names
+my $print_header = 1; # Indicates whether to print out a header with column names
 my $print_keywords = 0;
 my $include_keywords_with_undefined_values = 0;
 
@@ -56,11 +56,11 @@ my %options;
 #*                     Stop and return error status if errors are diagnosed.
 #*
 #*   -h, --print-header
-#*                     Print header with data column names at the first line.
+#*                     Print header with data column names at the first line
+#*                     (default).
 #*
 #*   -h-, --dont-print-header, --no-print-header
-#*                     Do not print column names on the first (header) line
-#*                     (default).
+#*                     Do not print column names on the first (header) line.
 #*
 #*   -k, --keywords
 #*                     Print values in separate lines prefixed with keywords.
