@@ -1,1 +1,2 @@
 --continue-on-errors --use-all-datablocks
+--no-print-header
