@@ -1,1 +1,2 @@
 -c
+--no-print-header
