@@ -1,1 +1,2 @@
 --continue-on-errors --use-perl-parser
+--no-print-header
