@@ -1,1 +1,2 @@
 --keywords --continue-on-errors
+--no-print-header
