@@ -1,1 +1,2 @@
 --keywords -c tests/inputs/1000023.cif tests/inputs/1000000.cif tests/inputs/8102326.cif
+--no-print-header
