@@ -1,1 +1,2 @@
 --continue-on-errors --require-only-doi
+--no-print-header
