@@ -1,1 +1,2 @@
 --columns file,formula,Z tests/inputs/2004650.cif
+--no-print-header
