@@ -1,2 +1,1 @@
--c
 --no-print-header
