@@ -1,3 +1,4 @@
 --keywords
 --validate tests/inputs/database-description_v1.0.xml
 --use-datablocks-without-coordinates
+--no-print-header
