@@ -1,3 +1,4 @@
 --keywords
 --validate doc/CODDictionary.xml
 --use-datablocks-without-coordinates
+--no-print-header
