@@ -1,1 +1,2 @@
 --use-all -c -k --columns authors
+--no-print-header
