@@ -9,4 +9,4 @@ INPUT_CIF=tests/inputs/2000000-trimmed.cif
 #END DEPEND--------------------------------------------------------------------
 
 ${INPUT_CIF2JSON} ${INPUT_CIF} \
-    | ${INPUT_CIF2COD} --json-input
+    | ${INPUT_CIF2COD} --json-input --no-print-header
