@@ -1,6 +1,8 @@
 cod-tools (3.0.0)
 
   * Changed:
+    - cif2cod:
+      - header with field names is printed by default.
     - cif2xyz:
       - proper XYZ format with a header is produced by default.
     - cif_fix_values:
